--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Sticky Notes App</title>
 </head>
 
 <body>
+    <nav class="navbar">
+        <h1>Sticky Notes</h1>
+    </nav>
+    <section class="sticky-notes-container grid">
+        <div class="add-button">
+            <p class="material-icons md-18">add</p>
+            <h2>New Note</h2>
+        </div>
+
+    </section>
+    <div class="delete-modal-container">
+        <div class="delete-modal">
+            <h3>Delete Note?</h3>
+            <p>Are you sure you want to delete this note?</p>
+            <div class="delete-modal-buttons-container">
+                <a class="back-btn"><span class="material-icons md-18">undo</span>Go Back</a>
+                <a class="modal-delete-btn"><span class="material-icons md-18">delete</span>Delete</a>
+            </div>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 
